# jupyter-notebook

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt  scripts.py  start.sh
jupyter_notebook/modules/graphql_client/client/: __init__.py
jupyter_notebook/modules/graphql_client/utils/: __init__.py
jupyter_notebook/modules/webdriver/chrome/: core.py
jupyter_notebook/modules/webdriver/firefox/: core.py
jupyter_notebook/notebook/: Thread.ipynb  devops_server.ipynb  multi_processamento.ipynb  whastsapp-chatbot.ipynb
jupyter_notebook/notebook/utilitarios/: pdf_split.ipynb  pdf_split_image.ipynb
jupyter_notebook/src/modules/graphql_client/: __init__.py
jupyter_notebook/src/modules/graphql_client/client/: core.py  graphql_client.py  types.py
jupyter_notebook/src/modules/graphql_client/utils/: core.py
jupyter_notebook/src/modules/html/: __init__.py  core.py
jupyter_notebook/src/modules/webdriver/: __init__.py
jupyter_notebook/src/modules/webdriver/chrome/: __init__.py  config.py
jupyter_notebook/src/modules/webdriver/firefox/: __init__.py  config.py
notebook/: teste.ipynb  testes.ipynb
notebook/src/jmodules/pandas/: __init__.py  core.py
notebook/src/modules/cache/: __init__.py  core.py
notebook/src/modules/graphql_client/: __init__.py  __version__.py  readme.md
notebook/src/modules/graphql_client/client/: __init__.py  core.py  graphql_client.py
notebook/src/modules/graphql_client/utils/: __init__.py  core.py
notebook/src/modules/report/: __init__.py  core.py
notebook/src/modules/utils/: __init__.py  __version__.py  asyncios.py  collections.py  dicts.py  graphqls.py  jsons.py  postgres.py  requirements.txt  sequence.py  setup.cfg  sqs.py  strings.py  traceback.py  validacao.py  xmls.py
notebook/src/modules/utils/tests/: test_asyncios.py  test_dicts.py  test_sequence.py  test_sqs.py  test_strings.py  test_validacao.py  test_xmls.py
scripts/: poetry.py
