[tool.poetry]
name = "jupyter-notebook"
version = "1.1.0"
description = "Jupyter Notebook."
authors = ["Douglas Panhota <douglaspands@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
matplotlib = "^3.3.1"
autopep8 = "^1.5.4"
jupyter_contrib_nbextensions = "^0.5.1"
pydash = "^4.8.0"
requests = "^2.24.0"
pandas = "^1.1.1"
wordcloud = "^1.8.0"
seaborn = "^0.10.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "scripts:start"
install_extensions = "scripts:install_extensions"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
