[tool.poetry]
name = "jupyter_notebook"
version = "1.1.1"
description = "Jupyter Notebook."
authors = ["Douglas Panhota <douglaspands@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.1"
jupyter_contrib_nbextensions = "^0.5.1"
pydash = "^4.8.0"
requests = "^2.24.0"
pandas = "^1.1.1"
wordcloud = "^1.8.0"
seaborn = "^0.10.1"
selenium = "^3.141.0"
pony = "^0.7.13"
lxml = "^4.5.2"
beautifulsoup4 = "^4.9.1"
jupyterlab = "^2.2.7"
pyPDF2 = "^1.26.0"
Pillow = "^9.3.0"
PyMuPDF = "^1.17.6"
numpy = "^1.19.2"
toml = "^0.10.2"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
pep8-naming = "^0.12.1"
flake8-isort = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.poetry:start"
install_extensions = "scripts.poetry:install_extensions"
create_script = "scripts.poetry:create_script"
requirements = "scripts.poetry:requirements_gen"
